visibility sizing and bug fix

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -63,7 +63,6 @@
 .post-caption .post-caption-text {
     visibility: hidden;
     max-width: 320px;
-    max-height: 90%;
     width: max-content;
     background-color: var(--color-dark);
     font-weight: normal;
@@ -90,7 +89,7 @@
     visibility: hidden;
     width: auto;
     max-width: 600px;
-    max-height: 60%;
+    max-height: 40%;
     background-color: var(--color-dark);
     text-align: center;
     align-items: center;
